--- a/src/Styles.css
+++ b/src/Styles.css
@@ -6,6 +6,21 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Arimo:wght@500;600&family=Cabin:ital@1&family=Fira+Sans:ital,wght@0,900;1,400&family=Kanit&family=Lato:wght@700&family=Mulish&family=PT+Sans+Narrow&family=Playpen+Sans:wght@500&family=Prompt&family=Roboto+Condensed:ital,wght@1,500&family=Rowdies&family=Sometype+Mono&family=Space+Grotesk:wght@700&display=swap');
 
+
+:root{
+
+
+/*Label mokepons colors*/
+--RockerLabelColor: rgb(21, 163, 21);
+--JokaLabelColor:lawngreen;
+--RaykiouLabelColor:#eb0909;
+--QuetzalLabelColor:aquamarine;
+--CrasterLabelColor:deepskyblue;
+--TruthlerLabelColor:#453e3e;
+
+}
+
+
 body{
 
   background-color:#060818;
@@ -24,6 +39,7 @@ body{
     
 }
 
+
 header{
 
   /*personalzacion*/
@@ -32,6 +48,8 @@ header{
   background-color:#0e0f0f;
   font-family: 'Arimo', sans-serif;;
   text-align: center;
+
+  text-shadow: #04da81 0.4rem 0.1rem 0.2rem;
 
 }
 
@@ -46,12 +64,14 @@ header{
 
 }
 
+
 .image-label-mokepon{
 
   width: 12rem;
   height: 15rem;
 
 }
+
 
 #subtittle{
 
@@ -75,6 +95,7 @@ header{
 
 }
 
+
 #selection-button{
   
   /*Element position*/
@@ -84,6 +105,7 @@ header{
   justify-content: center;
 
 }
+
 
 #game-functionality{
 
@@ -95,6 +117,7 @@ header{
   justify-content: center;
 
 }
+
 
 #rename_Mk_form{
 
@@ -117,6 +140,7 @@ header{
 
 }
 
+
 #span-elements{
 
   /*Element position*/
@@ -136,7 +160,7 @@ header{
 #label-raykiou{
 
   /* *Costume*/
-  color:#eb0909;
+  color:var(--RaykiouLabelColor);
 
   text-shadow: #070404 0.1rem 0.1rem 0.1rem 0.1rem;
 
@@ -144,37 +168,35 @@ header{
 
 #label-crabster{
 
-  /* *Costume*/
-
-  color:deepskyblue;
+  color: var(--CrasterLabelColor)
 
 }
 
 #label-joka{
 
   /* *Costume*/
-  color:lawngreen;
+  color:var(--JokaLabelColor);
   
 }
 
 #label-rocker{
 
   /* *Costume*/
-  color:darkgreen;
+  color:var(--RockerLabelColor);
 
 }
 
 #label-quetzal{
 
   /*personalizacio*/
-  color:aquamarine;
+  color:var(--QuetzalLabelColor);
 
 }
 
 #label-truthler{
 
   /*personalizacio*/
-  color:gray;
+  color:var(--TruthlerLabelColor);
 
 }
 
@@ -207,18 +229,11 @@ header{
 
 }
 
+
 .fire{
 
-  /* *Size*/
-    width: 11rem;
-    height: 5rem;
-    border-radius:10%;
-    font-size:1.5rem;
-
-  /* *Costume*/
     background-color: #e20a0a;
-    color:azure;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+    
 }
 
 .Fire{
@@ -230,17 +245,9 @@ header{
 
 .ice{
 
-  /* *Size*/
-  width: 11rem;
-  height: 5rem;
-  border-radius:10%;
-  font-size:1.5rem;
-
   /* *Costume*/
   background-color: #043783;
-  color:azure;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
-
+  
 }
 
 
@@ -253,16 +260,8 @@ header{
 
 .earth{
 
-  /* *Size*/
-  width: 11rem;
-  height: 5rem;
-  border-radius:10%;
-  font-size:1.5rem;
-
-  /* *Costume*/
   background-color: #0ae227;
-  color:azure;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif 
+
 }
 
 .Earth{
@@ -274,16 +273,7 @@ header{
 
 .steel{
 
-   /* *Size*/
-   width: 11rem;
-  height: 5rem;
-  border-radius:10%;
-  font-size:1.5rem;
- 
-   /* *Costume*/
-   background-color: #838884;
-   color:azure;
-   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif 
+  background-color: #838884;
 
 }
 
@@ -296,16 +286,8 @@ header{
 
 .thunder{
 
-   /* *Size*/
-  width: 11rem;
-  height: 5rem;
-  border-radius:10%;
-  font-size:1.5rem;
-
    /* *Costume*/
   background-color: #e4d50a;
-  color:azure;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif 
 
 }
 
@@ -318,17 +300,9 @@ header{
 
 .air{
 
-   /* *Size*/
-  width: 11rem;
-  height: 5rem;
-  border-radius:10%;
-  font-size:1.5rem;
- 
    /* *Costume*/
-   background-color: #0ae49b;
-   color:azure;
-   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif 
-
+  background-color: #0ae49b;
+  
 }
 
 .Air{
@@ -340,16 +314,7 @@ header{
 
 .water{
 
-   /* *Size*/
-  width: 11rem;
-  height: 5rem;
-  border-radius:10%;
-  font-size:1.5rem;
-  
-   /* *Costume*/
   background-color:#0d1f85;
-  color:azure;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif 
 
 }
 
@@ -360,10 +325,24 @@ header{
 }
 
 
+.fire, .water, .air, .earth, .steel, .thunder, .ice{
+
+  /* *Size*/
+  width: 11rem;
+  height: 5rem;
+  border-radius:10%;
+  font-size:1.5rem;
+  color:azure;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+  
+
+}
+
+
 #attack-buttons{
 
 /* *Size*/
-margin-top: 1rem;
+  margin-top: 3rem;
 
   /* *Position*/
 
@@ -415,6 +394,81 @@ margin-top: 1rem;
 
 }
 
+
+.image-label-mokepon{
+
+  animation: moveMk linear 1s infinite;
+
+}
+
+@keyframes moveMk{
+
+  0%,100%{
+
+    transform: translateY(0);
+
+  }
+
+  50%{
+
+    transform: translateY(1rem);
+
+  }
+
+}
+
+
+@keyframes moveMkInFight{
+
+  0%,100%{
+
+    transform: translateX(0);
+
+  }
+
+  50%{
+
+    transform: translateX(1rem);
+
+  }
+
+}
+
+
+@keyframes moveEnemy{
+
+
+  0%,100%{
+
+    transform: translateX(0);
+
+  }
+
+  50%{
+
+    transform: translateX(-1rem);
+
+  }
+
+}
+
+
+
+.player_image{
+
+  animation: moveMkInFight 1s linear infinite;
+
+}
+
+
+.enemy_image{
+
+
+  animation: 1s linear infinite moveEnemy;
+
+}
+
+
 #rename-button{
 
   /* *costume*/
@@ -430,12 +484,20 @@ margin-top: 1rem;
 
 }
 
-#reset_newGameButton_section{
+
+#reset_Game_section{
 
   display: flex;
   flex-flow: column-reverse;
 
+  align-self: center;
+
+  height: 100%;
+
+  gap:1.5rem;
+
 }
+
 
 #life-score-Player{
 
@@ -444,6 +506,7 @@ font-size: 1.3rem;
 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 }
+
 
 #VersusMessage{
 
@@ -457,6 +520,9 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
   /* *Size */
   font-size: 3rem;
 
+  margin: 0;
+
+  text-shadow: rgb(32, 30, 30) 0.10rem 0.3rem 0.1rem ;
 
 }
 
@@ -494,17 +560,18 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
 
 }
 
+
 #div-lifes-game{
 
 /* *Position*/
 display: flex;
-gap:25px;
 
-margin-left: 2rem;
+gap:2rem;
 
-margin-top: 4rem;
+margin-top: 2rem;
 
 }
+
 
 #defeat-tittle{
 
@@ -513,9 +580,14 @@ margin-top: 4rem;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
   /* *Size*/
-  font-size: 48px;
+  font-size: 2rem;
+
+  align-self: center;
+
+  margin:0;
 
 }
+
 
 #new-game{
 
@@ -530,13 +602,8 @@ margin-top: 4rem;
     background-color:#9804bd;
     border-radius: 1rem 1rem 1rem 1rem;
 
-  /* *Position */
-    grid-area:1/3/1/4;
-    align-self: end;
-    justify-self: center;
-    margin: 0 0 68px 0;
-
 }
+
 
 .label-mokepon{
 
@@ -557,15 +624,18 @@ margin-top: 4rem;
 
 }
 
+
 .button-selection-mokepon{
 
   display: none;
 
 }
 
+
 .button-selection-mokepon:checked + .label-mokepon{
   background-color: #07b1a3;
 }
+
 
 .spanTurns{
 
@@ -573,6 +643,7 @@ margin-top: 4rem;
   font-size: 2.4rem;
 
 }
+
 
 #No-Rename-Mokepon{
 
@@ -592,355 +663,6 @@ margin-top: 4rem;
 
 }
 
-
-@media(max-width:965px){
-
-  #div-lifes-game{
-
-    display: flex;
-    flex-flow: row;
-    gap:1rem;
-
-  }
-
-
-  #div-selection-mokepon{
-
-    flex-flow: column;
-
-  }
-
-  #attack-buttons{
-
-    flex-flow: row;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5rem;
-
-  }
-
-  .label-mokepon{
-
-    width:66%;
-    height:102%;
-    display: flex;
-    flex-flow:row;
-    font-size: 2.6rem;
-
-  }
-
-  .image-label-mokepon{
-
-    justify-self: start;
-
-  }
-
-  .name-label-mokepon{
-
-    align-self: center;
-    justify-self: end;
-
-  }
-
-  #subtittle{
-
-    font-size:1.8rem;
-    height: 4%;
-    width:63%;
-    display: flex;
-    justify-content: center;
-
-  }
-
-}
-
-@media(max-width:780px){
-
-  .label-mokepon{
-
-    width:56%;
-    height:102%;
-    font-size:1.3rem;
-
-  }
-
-  .image-label-mokepon{
-
-    width:54%;
-
-  }
-
-  #main-tittle{
-
-    font-size:4rem;
-
-  }
-
-  #mokeponMap{
-
-    width: 450px;
-    height: 450px;
-
-  }
-
-}
-
-
-@media(max-width:510px){
-
-  
-  #label-rename-button{
-
-    margin-top: 0.8rem;
-
-    font-size: 1.2rem;
-
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
-  }
-
-  #rename-button{
-
-    font-size:0.6rem;
-    width: 8rem;
-    height: 1rem;
-    border-radius: 3% 3%  3%  3% ;
-
-  }
-
-  #Rename-mokepon{
-  
-    font-size: 0.6rem;
-
-    border-radius: 0.2rem 0.2rem 0.2rem 0.2rem;
-
-    width: 6rem;
-    height: 1.7rem;
-
-  }
-
-  #No-Rename-Mokepon{
-
-    font-size: 0.7rem;
-    height: 2rem;
-    width: 7rem;
-
-    margin-bottom: 0.4rem;
-
-  }
-
-  #rename_Mk_form{
-
-    width: 50%;
-    height: 20rem;
-
-  }
-
-  #mokepon-name{
-
-    font-size: 0.6rem;
-
-  }
-
-  .spanTurns{
-
-    font-size: 0.7rem;
-
-  }
-
-  #name-enemy{
-
-    font-size: 0.6rem;
-
-  }
-
-  #main-tittle{
-
-    font-size: 3rem;
-
-  }
-
-  #div-lifes-game{
-
-    display: flex;
-    flex-flow: row;
-    gap:1rem;
-
-    margin-left: 1rem;
-
-  }
-
-  .life-score{
-
-    width:100rem;
-    height: 10rem;
-
-    font-size: 0.7rem;
-
-  }
-
-  #imageMkPlayer{
-
-    width: 10rem;
-    height: 10rem;
-
-  }
-
-  .ice{
-
-    width: 6.5rem;
-    height: 2.5rem;
-    font-size: 0.7rem;
-
-  }
-
-  .fire{
-
-    width: 6.5rem;
-    height: 2.5rem;
-    font-size: 0.7rem;
-
-  }
-
-  .steel{
-
-    width: 6.5rem;
-    height: 2.5rem;
-    font-size: 0.7rem;
-
-  }
-
-  .air{
-
-    width: 6.5rem;
-    height: 2.5rem;
-    font-size: 0.7rem;
-
-  }
-
-  .thunder{
-
-    width: 6.5rem;
-    height: 2.5rem;
-    font-size: 0.7rem;
-
-  }
-
-  .water{
-
-    width: 6.5rem;
-    height: 2.5rem;
-    font-size: 0.7rem;
-
-  }
-
-  .earth{
-
-    width: 6.5rem;
-    height: 2.5rem;
-    font-size: 0.7rem;
-
-  }
-
-
-  .Fire{
-
-    font-size: 0.4rem;
-
-  }
-
-  .Ice{
-
-    font-size: 0.4rem;
-
-  }
-
-  .Earth{
-
-    font-size: 0.4rem;
-
-  }
-
-  .Thunder{
-
-    font-size: 0.4rem;
-
-  }
-
-  .Steel{
-
-    font-size: 0.4rem;
-
-  }
-
-  .Water{
-
-    font-size: 0.4rem;
-
-  }
-
-  .Air{
-
-    font-size: 0.4rem;
-
-  }
-
-
-  #defeat-tittle{
-
-    font-size:2rem;
-
-  }
-
-  #VersusMessage{
-
-    font-size: 1.5rem;
-
-  }
-
-
-  #new-game{
-
-    width: 4rem;
-    height: 2rem;
-
-    font-size: 0.8rem;
-
-  }
-
-  .player_image{
-
-    width: 5rem;
-    height: 5rem;
-
-  }
-
-  .enemy_image{
-
-    width: 5rem;
-    height: 5rem;
-
-  }
-
-  #div-lifes-game{
-
-    gap: 1rem;
-
-  }
-
-  #atack-buttons{
-
-    flex-flow: row;
-
-  }
-
-  #game-functionality{
-
-    display: none;
-
-  }
-
-}
 
 .atackMessage{
 
@@ -1042,6 +764,598 @@ margin-top: 4rem;
   background: #9804bd;
 
 }
+
+
+@media(max-width:992px){
+
+
+  @keyframes moveMk{
+
+    0%,100%{
+  
+      transform: translateY(0);
+  
+    }
+  
+    50%{
+  
+      transform: translateY(0.2rem);
+  
+    }
+  
+  }
+  
+  
+  @keyframes moveMkInFight{
+  
+    0%,100%{
+  
+      transform: translateX(0);
+  
+    }
+  
+    50%{
+  
+      transform: translateX(1rem);
+  
+    }
+  
+  }
+  
+  
+  @keyframes moveEnemy{
+  
+  
+    0%,100%{
+  
+      transform: translateX(0);
+  
+    }
+  
+    50%{
+  
+      transform: translateX(-1rem);
+  
+    }
+  
+  }
+
+
+  #div-lifes-game{
+
+    display: flex;
+    flex-flow: row;
+
+    width: 100%;
+
+  }
+
+
+  #attack-buttons{
+
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1.7rem;
+
+  }
+
+
+  #new-game{
+
+    font-size: 1.2rem;
+    width: 8rem;
+
+  }
+
+
+  .label-mokepon{
+
+    width:10rem;
+    height:11rem;
+    font-size: 1rem;
+
+    display: flex;
+    flex-flow:column-reverse;
+    
+
+  }
+
+
+  .enemy_image{
+
+    width: 11rem;
+    height: 12.3rem;
+
+  }
+
+
+  .player_image{
+
+    width: 11rem;
+    height: 12.3rem;
+
+  }
+
+
+  #subtittle{
+
+    font-size:1.8rem;
+    height: 4%;
+    width:63%;
+    display: flex;
+    justify-content: center;
+
+  }
+
+
+  .image-label-mokepon{
+
+    width: 7rem;
+    height: 8rem;
+
+  }
+
+
+  #Select{
+
+    font-size: 1.3rem;
+    height: 2rem;
+    width: 4rem;
+
+  }
+
+
+  #main-tittle{
+
+    font-size: 5rem;
+
+    text-shadow: #04da81 0.1rem 0.3rem 0.1rem;
+
+  }
+
+
+  #mokeponMap{
+
+    width: 400px;
+    height:400px
+
+  }
+
+
+  .life-score{
+
+    height: 16rem;
+
+    width: 10.4rem;
+
+  }
+
+  #mokepon-name, #name-enemy, .Fire, .Ice, .Earth, .Air, .Steel, .Water{
+
+    font-size: 1rem;
+
+  }
+
+
+  .fire, .ice, .earth, .air, .steel, .water, .thunder{
+
+    font-size: 1rem;
+
+    width: 7rem;
+    height: 3.5rem;
+
+  }
+
+
+  #span-combat-result{
+
+    font-size: 1.7rem;
+
+    text-shadow: rgb(32, 30, 30) 0.10rem 0.2rem 0.1rem ;
+
+
+  }
+
+
+  #span-elements{
+
+    justify-content: start;
+    gap:0.2rem;
+
+  }
+
+
+  .spanTurns{
+
+    font-size: 2rem;
+
+  }
+
+
+
+}
+
+@media(max-width:768px){
+
+  .label-mokepon{
+
+    width:56%;
+    height:102%;
+    font-size:1.3rem;
+
+  }
+
+  .image-label-mokepon{
+
+    width:54%;
+
+  }
+
+  #main-tittle{
+
+    font-size:4rem;
+
+  }
+
+}
+
+
+@media(max-width:480px){
+
+
+  #div-selection-mokepon{
+
+    flex-flow: column;
+
+  }
+
+
+  @keyframes moveMk{
+
+    0%,100%{
+  
+      transform: translateY(0);
+  
+    }
+  
+    50%{
+  
+      transform: translateY(0.5rem);
+  
+    }
+
+  }
+
+
+
+  @keyframes moveMkInFight{
+
+    0%,100%{
+  
+      transform: translateX(0);
+  
+    }
+  
+    50%{
+  
+      transform: translateX(0.5rem);
+  
+    }
+  
+  }
+  
+  
+  @keyframes moveEnemy{
+  
+  
+    0%,100%{
+  
+      transform: translateX(0);
+  
+    }
+  
+    50%{
+  
+      transform: translateX(-0.5rem);
+  
+    }
+  
+  }
+
+
+  .image-label-mokepon{
+
+    width: 9rem;
+    height: 10rem;
+
+  }
+
+
+  #how_move_mokepon_message{
+
+    display:none;
+
+  }
+
+  #move-buttons-container{
+
+
+    width: 5rem;
+    height: 5rem;
+
+    margin-top: 0.5rem;
+
+  }
+
+
+  #reset_button{
+
+    font-size: 0.8rem;
+    border-radius: 1rem;
+
+    width: 7rem;
+    height: 2rem;
+
+    margin-top: 0.5rem;
+
+  }
+
+
+  #main-tittle{
+
+    font-size: 2rem;
+
+    text-shadow: #04da81 0.1rem 0.2rem 0.1rem;
+
+  }
+
+
+  #Select{
+
+    font-size: 1rem;
+
+  }
+
+
+  #div-tittle{
+
+    width: 100%;
+    height: fit-content;
+
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+  }
+
+  
+  #subtittle{
+
+    width: 70%;
+    font-size:1rem;
+
+  }
+
+
+  .move-button{
+
+    width: 1.6rem;
+    height: 1.6rem;
+
+    font-size: 0.6rem;
+
+  }
+
+
+  #mokeponMap{
+
+    width: 235px;
+    height: 235px;
+
+  }
+  
+
+  #mokepon-name{
+
+    font-size: 0.6rem;
+
+  }
+
+  .spanTurns{
+
+    font-size: 0.7rem;
+
+    margin:0 1.5rem 0 1.5rem;
+
+  }
+
+  #name-enemy{
+
+    font-size: 0.6rem;
+
+  }
+
+
+  #div-lifes-game{
+
+    display: flex;
+    flex-flow: row;
+
+    justify-content: center;
+
+    gap:0rem;
+
+  }
+
+
+  .life-score{
+
+    height: 9rem;
+    width: 100%;
+
+  }
+
+  #imageMkPlayer, #imageMkEnemy{
+
+    width: fit-content;
+    height: fit-content;
+
+  }
+
+
+  .fire, .ice, .earth, .air, .thunder, .steel, .water{
+
+    width: 6.5rem;
+    height: 2.5rem;
+    font-size: 0.7rem;
+
+  }
+
+
+  .Fire, .Ice, .Earth, .Steel, .Thunder, .Water, .Air{
+
+    font-size: 0.4rem;
+
+  }
+
+
+  #defeat-tittle{
+
+    font-size:0.8rem;
+
+  }
+
+  #VersusMessage{
+
+    font-size: 1.4rem;
+
+  }
+
+
+  #new-game{
+
+    width: 4rem;
+    height: 2rem;
+
+    font-size: 0.8rem;
+
+  }
+
+
+  .player_image, .enemy_image{
+
+    width: 5rem;
+    height: 5rem;
+
+
+  }
+
+
+  .player_image{
+
+    margin-right: 1rem;
+
+  }
+
+
+  .enemy_image{
+
+    margin-left: 1rem;
+
+  }
+
+
+  #attack-buttons{
+
+    flex-flow: row;
+    gap:0.3rem;
+
+    margin-top: 1rem;
+
+  }
+
+
+  #game-functionality{
+
+    display: none;
+
+  }
+
+
+  .player_image, .enemy_image{
+
+    width: 5.2rem;
+    height: 5.2rem;
+
+  }
+
+
+  #reset_Game_section{
+
+    width: 5rem;
+    height: 9rem;
+
+  }
+
+  #span-combat-result{
+
+    font-size: 0.74rem;
+
+  }
+
+
+  #reset_Game_section{
+
+    height: 80%;
+
+    transform: translateY(-5%);
+
+  }
+
+  #enemy-atacks-box{
+
+    margin:0;
+
+  }
+
+
+  #new-game{
+
+    width: 3.5rem;
+
+    font-size: 0.6rem;
+
+    height: 1.5rem;
+
+  }
+
+  #life-score-Player{
+
+    margin-right: 0.2rem;
+
+  }
+
+
+  #life-score-enemy{
+
+    margin-left: 0.2rem;
+
+  }
+
+
+  #mapContainer{
+
+    margin-top: 1rem;
+
+  }
+
+}
+
+
+
+
 
 
 
